--- a/styles/app.css
+++ b/styles/app.css
@@ -239,6 +239,7 @@ body {
 
 .nav {
     display: flex;
+    align-items: center;
 
 }
 .nav-logo{
@@ -254,8 +255,6 @@ body {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    margin-left: 3rem;
-    align-items: center;
 }
 .menu__item {
     margin: 0 1rem;
@@ -267,10 +266,15 @@ body {
     color: #fff;
     text-decoration: none;
     padding: 0.9rem 1.5rem;
-    border-radius: 10px;
+    border-radius: 0.3rem;
 
 }
 
+.header__icon {
+    font-size: 1.8rem;
+    display: none;
+    cursor: pointer;
+}
 .menu__link {
     text-decoration: none;
     color: #081D43;
@@ -322,7 +326,7 @@ body {
     color: #fff;
     text-decoration: none;
     padding: 0.9rem 1.5rem;
-    border-radius: 10px;
+    border-radius: 0.3rem;
     margin-right: 1rem;
     display: block;
     width: 10rem;
@@ -342,12 +346,12 @@ body {
 /* Start Main */
 
 .main {
-    padding-top: 8rem;
-
+    padding-top: 3rem;
 }
 
 .works {
     text-align: center;
+    padding: 5rem 0;
 }
 
 .works__text, .portfolio__text {
@@ -358,19 +362,21 @@ body {
 }
 .works__title, .portfolio__title {
     color: #081D43;
-    margin-top: 0.8rem;
+    margin-top: 1rem;
     font-family: 'TTNorms Medium';
     font-weight: normal;
 
 }
 .works-content {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 4rem;
 
 }
 .works-content__item {
-
+    flex-basis: 16rem;
+    flex-shrink: 0;
 }
 .works-content__title {
     color: #081D43;
@@ -414,13 +420,15 @@ body {
 .person-comments__title {
     font-family: 'TTNorms Medium';
     font-weight: normal;
+    font-size: 1.8rem;
 }
 .person-comments__text {
     font-family: 'TTNorms Light';
-
-
-
+    max-width: 50rem;
+    margin: 0 auto;
+    line-height: 3rem;
 }
+
 .comments {
     display: flex;
     justify-content: center;
@@ -429,7 +437,7 @@ body {
 .comment {
     background-color: #fff;
     margin: 1rem;
-    border-radius: 0.5rem;
+    border-radius: 0.3rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -486,7 +494,8 @@ body {
 
 .portfolio {
     text-align: center;
-    padding: 6rem 0;
+    padding: 5rem 0;
+
 }
 .container {
 
@@ -506,11 +515,13 @@ body {
 .portfolio__item {
     margin: 1rem 0;
     flex-basis: 25rem;
-    border-radius: 2rem;
+    border-radius: 0.3rem;
     overflow: hidden;
 }
 .portfolio__img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 
 }
 
@@ -521,7 +532,7 @@ body {
 }
 .footer-up {
     background-color: #2C57E4;
-    padding: 5rem 0;
+    padding: 7rem 0;
     color: #ffff;
 
 }
@@ -536,8 +547,8 @@ body {
 }
 .footer-up__email {
     background-color: #fff;
-    flex-basis: 20rem;
-    padding: 0.4rem;
+    flex-basis: 22rem;
+    padding: 0.3rem;
     display: flex;
     justify-content: space-between;
     border-radius: 0.3rem;
@@ -585,16 +596,75 @@ body {
     .container {
         max-width: 720px;
     }
+    .header_link {
+        display: none;
+    }
+    .header-content {
+        flex-direction: column-reverse;
+    }
+    .header-bottom {
+        margin-top: 3rem;
+    }
+    .header-content__wrapper {
+        max-width: 100%;
+    }
+    .header-content__right {
+        margin-bottom: 2rem;
+    }
+    .header-content__links {
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    .header-content__link {
+        margin-bottom: 1rem;
+    }
+    .works-content {
+        flex-wrap: wrap;
+    }
+
 }
 
 @media only screen and (max-width: 768px) {
     .container {
         max-width: 540px;
     }
+    .header__icon {
+        display: block;
+    }
+
+    .menu {
+        position: fixed;
+        top: 0;
+        left: -256px;
+        bottom: 0;
+        background-color: #3f70e1;
+        width: 16rem;
+        flex-direction: column;
+        padding: 2rem 1rem;
+        transition: 0.3s all;
+    }
+    .menu__item {
+        margin-bottom: 3rem;
+        font-size: 1.2rem;
+    }
+    .menu__link {
+        color: #fff;
+    }
+    .works-content__item {
+        flex-basis: 14rem;
+    }
+
 }
 
 @media only screen and (max-width: 576px) {
     .container {
+        max-width: 100%;
+    }
+    .works-content__item {
+        flex-basis: 100%;
+        margin-bottom: 2rem;
+    }
+    .works-content__text {
         max-width: 100%;
     }
 }
