--- a/styles/app.css
+++ b/styles/app.css
@@ -514,7 +514,7 @@ body {
 }
 .portfolio__item {
     margin: 1rem 0;
-    flex-basis: 25rem;
+    flex-basis: 24rem;
     border-radius: 0.3rem;
     overflow: hidden;
 }
@@ -558,6 +558,7 @@ body {
     border: none;
     padding: 1rem;
     outline: none;
+    width: 100%;
 
 }
 .footer-up__btn {
@@ -581,6 +582,7 @@ body {
     color: #6C7890;
     padding: 1rem 0;
     align-items: center;
+    flex-wrap: wrap;
 
 }
 
@@ -589,6 +591,12 @@ body {
 @media only screen and (max-width: 1200px) {
     .container {
         max-width: 960px;
+    }
+    .portfolio__item {
+        flex-basis: 19rem;
+    }
+    .footer-up__text {
+        max-width: 28rem;
     }
 }
 
@@ -633,6 +641,15 @@ body {
     .company {
         margin: 0.5rem 1rem;
     }
+    .portfolio-items {
+        justify-content: space-around;
+    }
+    .portfolio__item {
+        flex-basis: 21rem;
+    }
+    .footer-up__text {
+        max-width: 20rem;
+    }
 
 }
 
@@ -649,8 +666,9 @@ body {
         top: 0;
         left: -256px;
         bottom: 0;
-        background-color: #3f70e1;
-        width: 16rem;
+        background-color: rgb(63 112 225 / 50%);
+        backdrop-filter: blur(12px);
+        width: 15rem;
         flex-direction: column;
         padding: 2rem 1rem;
         transition: 0.3s all;
@@ -661,6 +679,7 @@ body {
     }
     .menu__link {
         color: #fff;
+
     }
     .works-content__item {
         flex-basis: 14rem;
@@ -669,7 +688,20 @@ body {
         margin: 0 0.5rem 1.5rem 0;
         flex-basis: 15rem;
     }
-
+    .portfolio__item {
+        flex-basis: 100%;
+    }
+    .footer-up__wrapper {
+        flex-direction: column;
+    }
+    .footer-up__text {
+        max-width: 100%;
+        margin-bottom: 2rem;
+    }
+    .footer-up__email {
+        flex-basis: auto;
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 576px) {
@@ -688,5 +720,8 @@ body {
     }
     .companies {
         flex-direction: column;
+    }
+    .footer-up__btn {
+        padding: 1rem 1.2rem;
     }
 }
